--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,9 +1,14 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# Keyboard name
+CONFIG_ZMK_KEYBOARD_NAME=corne-mintz
 
+# Increase wireless range
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
-# Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Enable deep sleep after 90 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
