Fix string literal

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # Keyboard name
-CONFIG_ZMK_KEYBOARD_NAME=corne-mintz
+CONFIG_ZMK_KEYBOARD_NAME="corne-mintz"
 
 # Increase wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
