--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,3 +12,6 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
+# Report battery for both sides
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
