--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,6 +12,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
+# Enable bluetooth experimental features
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
 # Report battery for both sides
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
